Migrate to Java 11, update deps, replace most guava methods with native java ones and add config method to load all parser configs from the CLB API